dev: deploying tests